# forefore

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.rst  pyproject.toml
core/accounts/: models.py
core/accounts/migrations/: 0001_initial.py  0002_rename_id_profile_uuid.py
core/api/: serializers.py  urls.py  views.py
core/general/: permissions.py
core/products/: admin.py  apps.py  forms.py  models.py  modules.py  signals.py  tests.py  urls.py  views.py
core/products/migrations/: 0001_initial.py  0002_times_pickups.py  0003_alter_products_cmt_alter_products_name.py  0004_rename_sale_sales_alter_sales_table.py  0005_bitdays_alter_cookies_options_and_more.py  0006_cakes_options_schedules_cakeoptions_cakes_options_and_more.py
core/products/templates/products/: cakes.html  cakes_add.html  cakes_options.html  cakes_options_add.html  cakes_options_view.html  cakes_schedules.html  cakes_schedules_add.html  cakes_schedules_view.html  cakes_view.html  cookies.html  cookies_products.html  cookies_products_add.html  cookies_products_view.html  cookies_times.html  cookies_times_add.html  cookies_times_view.html  cookies_view.html  test.html
core/products/templatetags/: customtags.py
core/project/: urls.py
core/project/settings/: __init__.py  base.py  logging.py
core/project/settings/templates/: settings.dev.py
core/static/js/: base.js
core/static/js/products/: cakes.js  cakes_add.js  cakes_options.js  cakes_schedules_add.js  (+4 more)
core/static/styles/: style.css
core/templates/: base.html  login.html
scripts/: entrypoint.sh
